--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@ h3 {
     color: #333;
     padding: 10px;
     text-align: center;
-    background-color: #f39c12;
+    background-color: #fff453;
     width: 100%;
 }
 
@@ -123,7 +123,7 @@ h3 {
 .product-info p {
     margin: 5px 0 0 0;
     font-size: 16px;
-    color: #8e44ad;
+    color: #54bc31;
     font-weight: 700;
 }
 
